<resources>
    <string name="app_name">Smart Investor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="teaminvento_website">www.teaminvento.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_navigation">Navigation</string>
    <string name="general">General</string>
    <string name="communication">Communication</string>

    <string name="home">Home</string>
    <string name="term_plan">Term Insurance Plan</string>
    <string name="sip">Systematic Insurance Plan (SIP)</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="latest_updates">Latest Updates</string>
    <string name="informative_videos">Informative Videos</string>
    <string name="feedback">Feedback | Write to us</string>
    <string name="share">Share</string>
    <string name="notifications">Notifications</string>
    <string name="app_description">Get proper planning of your investment. Connect with us and secure your future. Our app gives you systematic plan of investment of your money, different methods to invest money. How to invest? where to invest? how much to invest?    Invest for how long? When to invest? All the questions and one answer.. **Smart Investor**</string>
    <string name="copyright_text">Copyright © 2020 TeamInvento</string>
    <string name="app_banner_description">App banner</string>
    <string name="earning_text">If you are earning 10000 or more, you are at right place..</string>
    <string name="must_have">You must have:</string>
    <string name="term_plan_description">Life insurance to take care of your loving people</string>
    <string name="sip_description">To grow your money</string>
    <string name="health_insurance_description">To manage accidental expenses</string>
    <string name="thumb_rule">Thumb rule: You must allocate 10% of earning towards this</string>

    <string name="what_is_term_plan">What is term plan?</string>
    <string name="why_to_buy_term_plan">Why to buy term plan?</string>
    <string name="how_to_buy_term_plan">How to buy term plan?</string>
    <string name="when_to_buy">When to buy?</string>
    <string name="irda_guidelines">IRDA Guidelines</string>

    <string name="what_is_sip">What is SIP?</string>
    <string name="why_to_buy_sip">Why to buy SIP?</string>
    <string name="how_to_buy_sip">How to buy SIP?</string>
    <string name="when_to_buy_sip">When to buy SIP?</string>
    <string name="market_risk_warning">*Market investments are subject to market risk</string>

    <string name="what_is_health_insurance">What is Health Insurance?</string>
    <string name="why_to_buy_health_insurance">Why to buy Health Insurance?</string>
    <string name="how_to_buy_health_insurance">How to buy Health Insurance?</string>
    <string name="when_to_buy_health_insurance">When to buy Insurance?</string>
    <string name="type_of_health_insurance">Types of Health Insurance</string>

    <string name="add_symbol">+</string>

    <!--   AdMob credentials-->
    <string name="admob_app_id">ca-app-pub-2706731883514895~8292910763</string>
    <string name="admob_banner_id">ca-app-pub-2706731883514895/6896068610</string>
    <string name="admob_interstitial_banner_id">ca-app-pub-2706731883514895/8536453346</string>

    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="hint_feedback">Feedback/Suggestion</string>
    <string name="send">Send</string>

    <string name="default_notification_channel_id">smart_investor_default_channel</string>
    <string name="smart_investor_message">Smart Investor Message</string>

    <!--    Firebaase Cloud messaging token-->
    <string name="fcm_token">cBQ816jfShKXInYdmYE5b8:APA91bGrcXD-v1GSTwN3FT6tXdSb3jl65TT79RNJu0UedhugHTBiZ0S6uREfnLBi857lm-Cbnb3Yek-kTpBMhrtIhNL04NVHM71ghoHARTAbER0jzcW_k2shgyd--UST0T6VQzix1bAn</string>

    <string name="hello_blank_fragment">Hello Blank fragment</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
</resources>
