<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.teaminvento.smartinvestor.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_TermPlanFragment"
            app:destination="@id/nav_term_plan" />

        <action
            android:id="@+id/action_HomeFragment_to_SipFragment"
            app:destination="@id/nav_sip" />

        <action
            android:id="@+id/action_HomeFragment_to_HealthFragment"
            app:destination="@id/nav_health_insurance" />
    </fragment>

    <fragment
        android:id="@+id/nav_term_plan"
        android:name="com.teaminvento.smartinvestor.ui.TermPlanFragment"
        android:label="@string/term_plan"
        tools:layout="@layout/fragment_term_plan">


    </fragment>

    <fragment
        android:id="@+id/nav_sip"
        android:name="com.teaminvento.smartinvestor.ui.SipFragment"
        android:label="@string/sip"
        tools:layout="@layout/fragment_sip">

    </fragment>

    <fragment
        android:id="@+id/nav_health_insurance"
        android:name="com.teaminvento.smartinvestor.ui.HealthInsuranceFragment"
        android:label="@string/health_insurance"
        tools:layout="@layout/fragment_health_insurance">


    </fragment>

    <fragment
        android:id="@+id/nav_latest_updates"
        android:name="com.teaminvento.smartinvestor.ui.LatestUpdatesFragment"
        android:label="@string/latest_updates"
        tools:layout="@layout/fragment_latest_updates">

    </fragment>

    <fragment
        android:id="@+id/nav_informative_videos"
        android:name="com.teaminvento.smartinvestor.ui.InformativeVideosFragment"
        android:label="@string/informative_videos"
        tools:layout="@layout/fragment_informative_videos">

    </fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.teaminvento.smartinvestor.ui.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback"

        >

    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.teaminvento.smartinvestor.ui.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share">


    </fragment>


</navigation>