<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
android:orientation="vertical"
tools:context=".ui.FeedbackFragment">


<EditText
    android:inputType="textEmailSubject"
    android:id="@+id/txtSubject"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/subject"
    android:layout_margin="10dp"
    android:padding="6dp"/>

<EditText
    android:id="@+id/txtMessage"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="top"
    android:hint="@string/hint_feedback"
    android:layout_margin="10dp"
    android:padding="6dp"/>

<Button
    android:id="@+id/btnOK"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:text="@string/send" />
</LinearLayout>