<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SipFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/what_is_sip"
                android:textSize="18sp" />

            <Button
                android:id="@+id/view_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/why_to_buy_sip"
                android:textSize="18sp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/how_to_buy_sip"
                android:textSize="18sp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/when_to_buy_sip"
                android:textSize="18sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="3dp"
            android:gravity="center"
            android:text="@string/market_risk_warning"
            android:textColor="#f31"
            android:textSize="18sp" />





    </LinearLayout>




</ScrollView>
