<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HealthInsuranceFragment"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/what_is_health_insurance"
                android:textSize="16sp" />

            <Button
                android:id="@+id/view_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/why_to_buy_health_insurance"
                android:textSize="16sp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/how_to_buy_health_insurance"
                android:textSize="16sp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/when_to_buy_health_insurance"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="6dp"
            android:stateListAnimator="@animator/lift_on_touch"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/type_of_health_insurance"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:background="@null"
                android:gravity="end"
                android:paddingEnd="10dp"
                android:text="@string/add_symbol"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>